<resources>
    <string name="app_name">合肥公交</string>
    <string name="noCaching">关闭缓存</string>
    <string name="yesCaching">开启缓存</string>
    <string name="start_point_name">起点名称</string>
    <string name="end_point_name">终点名称</string>
    <string name="operate_time">运营时间</string>
    <string name="operate_company">运营公司</string>
    <string name="station_count">线路站点</string>
    <string name="lint_length">线路长度</string>
    <string name="transfer_start">请点击选择起点</string>
    <string name="transfer_stop">请点击选择终点</string>
    <string name="transfer_search_commit">换乘查询</string>
    <string name="no_data_tips">暂时没有数据，来一组查询吧？</string>
    <string name="clear">清空</string>
    <string name="info">%1$s 站上车\n乘坐 %2$s 路（ %3$s 站 ）\n %4$s 站下车</string>
    <string name="app_label">合肥公交</string>
    <string name="my_site">我的收藏</string>
    <string name="my_address">常用地址</string>
    <string name="my_arrive_site">到站提醒</string>
    <string name="my_clear_cache">清除缓存</string>
    <string name="my_about">关于我</string>
    <string name="recent_station">最近的车站</string>
    <string name="history_title">历史记录</string>
    <string name="recent_line">最近的线路</string>
    <string name="recent_transfer">最近的换乘方案</string>
    <string name="no_histroy">查询历史记录将显示在这里</string>
</resources>
