<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="end"
        app:title="@string/app_name"
        app:titleTextColor="@color/icons">

        <Button
            android:id="@+id/clear_history"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_delete_black_24dp" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/recent_station"
                android:textColor="@color/icons"
                android:textSize="16sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recent_station"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/search_background_selector"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/recent_line"
                android:textColor="@color/icons"
                android:textSize="16sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recent_line"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/search_background_selector"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/recent_transfer"
                android:textColor="@color/icons"
                android:textSize="16sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recent_transfer"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/search_background_selector"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>