<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/line_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textColor="@color/icons"
            android:textSize="18sp"
            tool:text="line_name" />

        <Button
            android:id="@+id/line_favour_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_favorite_disable_24dp" />

    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/icons" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/line_reverse_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_cached_24dp"
            android:padding="20dp" />

        <TextView
            android:id="@+id/line_info1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/start_point_name"
            android:textColor="@color/icons" />

        <TextView
            android:id="@+id/line_info2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_toEndOf="@id/line_info1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textAlignment="center"
            android:textColor="@color/icons"
            tool:text="南门换乘中心" />

        <TextView
            android:id="@+id/line_info3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line_info1"
            android:layout_margin="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/end_point_name"
            android:textColor="@color/icons" />

        <TextView
            android:id="@+id/line_info4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line_info1"
            android:layout_margin="5dp"
            android:layout_toEndOf="@id/line_info3"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textAlignment="center"
            android:textColor="@color/icons"
            tool:text="火车站" />

        <TextView
            android:id="@+id/line_info5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line_info3"
            android:layout_margin="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/operate_time"
            android:textColor="@color/icons" />

        <TextView
            android:id="@+id/line_info6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line_info3"
            android:layout_margin="5dp"
            android:layout_toEndOf="@id/line_info5"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textAlignment="center"
            android:textColor="@color/icons"
            tool:text="5：30 - 22：30" />

        <TextView
            android:id="@+id/line_info7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line_info5"
            android:layout_margin="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/operate_company"
            android:textColor="@color/icons" />

        <TextView
            android:id="@+id/line_info8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line_info5"
            android:layout_margin="5dp"
            android:layout_toEndOf="@id/line_info7"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textAlignment="center"
            android:textColor="@color/icons"
            tool:text="合肥公交四公司" />

        <TextView
            android:id="@+id/line_info9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line_info7"
            android:layout_margin="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/station_count"
            android:textColor="@color/icons" />

        <TextView
            android:id="@+id/line_info10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line_info7"
            android:layout_margin="5dp"
            android:layout_toEndOf="@id/line_info7"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textAlignment="center"
            android:textColor="@color/icons"
            tool:text="35站" />

        <TextView
            android:id="@+id/line_info11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line_info9"
            android:layout_margin="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/lint_length"
            android:textColor="@color/icons" />

        <TextView
            android:id="@+id/line_info12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line_info9"
            android:layout_margin="5dp"
            android:layout_toEndOf="@id/line_info11"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textAlignment="center"
            android:textColor="@color/icons"
            tool:text="13.5 千米" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/icons" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/line_detail_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>